--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,9 @@
         <link rel="icon" href="/static/images/favicon.png">
         <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/static/main.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
         <script src="https://use.typekit.net/rdb8ojx.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
         <script src="/static/main.js"></script>
@@ -16,8 +19,32 @@
                 <small>Communications asset editor</small>
             </div>
             <div class="entry">
+                <input type="text" id="titleInput" value="Your event title here">
+                <input type="text" id="infoInput" value="Your event info here">
+                <input type="range" id="gradInput" min="0.0" max="1.0" step="0.01">
             </div>
-            <div class="preview">
+            <div class="previews">
+                <h2>Your assets</h2>
+                <div class="preview">
+                    <h3>Poster (A4/A5)</h3>
+                    <div class="asset print poster">
+                        <div class="content gradient-container">
+                            <div class="gradient"></div>
+                            <div class="title"></div>
+                            <div class="info"></div>
+                        </div>
+                        <div class="footer">
+                            <div class="link">
+                                Part of Disobedience Live<br>
+                                disobedience.live/events
+                            </div>
+                            <div class="logo">
+                                DIS_OBEDIENCE.LIVE
+                            </div>
+                        </div>
+                    </div>
+                    <a href="">Download this asset (PDF)</a>
+                </div>
             </div>
         </div>
     </body>
