--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,9 +38,7 @@
                                 Part of Disobedience Live<br>
                                 disobedience.live/events
                             </div>
-                            <div class="logo">
-                                DIS_OBEDIENCE.LIVE
-                            </div>
+                            <img class="logo" src="/static/images/logo.svg">
                         </div>
                     </div>
                     <a href="">Download this asset (PDF)</a>
