--- a/src/scss/_assets.scss
+++ b/src/scss/_assets.scss
@@ -1,4 +1,6 @@
 .asset {
+    width: 100%;
+    height: 100%;
     .gradient-container {
         position: relative;
         overflow: hidden;
@@ -69,7 +71,7 @@
 .poster {
     font-size: 10mm;
     width: 21em;
-    height: 29em;
+    height: 29.7em;
 
     position: relative;
 
@@ -114,7 +116,8 @@
 
         .logo {
             float: right;
-            font-size: 0.6em;
+            width: 30%;
+            height: auto;
         }
     }
 }
