Fix wkhtmlto* rendering quirks
* Use gradient image to avoid banding
* Add UTF-8 charset to properly render unicode characters

--- a/app/templates/asset.html
+++ b/app/templates/asset.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+        <meta charset="UTF-8">
         <style>
             body, html {
                 width: 100%;
