Add format for Facebook headers

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,10 +23,30 @@
                 <input type="text" id="infoInput" value="Your event info here">
                 <input type="range" id="gradInput" min="0.0" max="1.0" step="0.01">
             </div>
+
+            <h2>Your assets</h2>
             <div class="previews">
-                <h2>Your assets</h2>
                 <div class="preview">
-                    <h3>Poster (A4/A5)</h3>
+                    <h3>Facebook header</h3>
+                    <div class="asset screen fbheader">
+                        <div class="content gradient-container">
+                            <div class="gradient"></div>
+                            <div class="title"></div>
+                            <div class="info"></div>
+                        </div>
+                        <div class="footer">
+                            <div class="link">
+                                Part of Disobedience Live<br>
+                                disobedience.live/events
+                            </div>
+                            <img class="logo" src="/static/images/logo-white.svg">
+                        </div>
+                    </div>
+                    <a href="">Download this asset (JPG)</a>
+                </div>
+
+                <div class="preview">
+                    <h3>Poster (A4)</h3>
                     <div class="asset print poster">
                         <div class="content gradient-container">
                             <div class="gradient"></div>
