Add instagram format

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,6 +27,25 @@
             <h2>Your assets</h2>
             <div class="previews">
                 <div class="preview">
+                    <h3>Instagram photo</h3>
+                    <div class="asset screen instagram">
+                        <div class="content gradient-container">
+                            <div class="gradient"></div>
+                            <div class="title"></div>
+                            <div class="info"></div>
+                        </div>
+                        <div class="footer">
+                            <div class="link">
+                                Part of Disobedience Live<br>
+                                disobedience.live/events
+                            </div>
+                            <img class="logo" src="/static/images/logo-white.svg">
+                        </div>
+                    </div>
+                    <a href="">Download this asset (JPG)</a>
+                </div>
+
+                <div class="preview">
                     <h3>Facebook header</h3>
                     <div class="asset screen fbheader">
                         <div class="content gradient-container">
