Style entry form

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,13 +18,25 @@
                 <h1>DIS_OBEDIENCE.LIVE</h1>
                 <small>Communications asset editor</small>
             </div>
+            <h2>Edit the content</h2>
             <div class="entry">
-                <input type="text" id="titleInput" value="Your event title here">
-                <input type="text" id="infoInput" value="Your event info here">
-                <input type="range" id="gradInput" min="0.0" max="1.0" step="0.01">
+                <ul class="inputs">
+                    <li>
+                        <label for="titleInput">Title</label>
+                        <input type="text" id="titleInput" value="Your event title here">
+                    </li>
+                    <li>
+                        <label for="titleInput">Info</label>
+                        <input type="text" id="infoInput" value="Your event info here">
+                    </li>
+                    <li>
+                        <label for="titleInput">Gradient offset</label>
+                        <input type="range" id="gradInput" min="0.0" max="1.0" step="0.01">
+                    </li>
+                </ul>
             </div>
 
-            <h2>Your assets</h2>
+            <h2>Get the assets</h2>
             <div class="previews">
                 <div class="preview">
                     <h3>Instagram photo</h3>
