--- a/app/static/main.css
+++ b/app/static/main.css
@@ -1,21 +1,3 @@
-@keyframes moving-gradient {
-  0% {
-    left: 0; }
-  100% {
-    left: -2600px; } }
-
-@keyframes scale-gradient {
-  0% {
-    transform: scale(1, 1); }
-  25% {
-    transform: scale(1.3, 1); }
-  50% {
-    transform: scale(1.1, 1); }
-  75% {
-    transform: scale(1.2, 1); }
-  100% {
-    transform: scale(1, 1); } }
-
 body {
   font-size: 10px; }
   body .page {
@@ -65,3 +47,225 @@ img {
   .header h1 {
     font-family: "alternate-gothic-no-1-d", sans-serif;
     margin: 0; }
+
+.entry {
+  font-size: 1.1em; }
+  .entry .inputs {
+    padding: 0;
+    margin: 0; }
+    .entry .inputs li {
+      list-style-type: none;
+      margin: 0;
+      padding: 0; }
+    .entry .inputs li {
+      margin: 0 0 1em; }
+  .entry label {
+    display: block;
+    margin: 0 0 0.5em; }
+  .entry input {
+    width: 100%;
+    max-width: 40em; }
+  .entry input[type=text] {
+    padding: 0.4em; }
+
+.asset {
+  width: 100%;
+  height: 100%; }
+  .asset .gradient-container {
+    position: relative;
+    overflow: hidden; }
+  .asset .gradient {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 1000%; }
+    .asset .gradient:before {
+      content: "";
+      display: block;
+      position: absolute;
+      z-index: 0;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background-image: url(/static/images/gradient.png);
+      background-size: 100% 10px; }
+    .asset .gradient:after {
+      content: "";
+      display: block;
+      background: url(/static/images/noise.gif);
+      background-size: 500px 500px;
+      position: absolute;
+      opacity: 0.10;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0; }
+  .asset .title, .asset .info {
+    color: white;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 10; }
+  .asset .title:after {
+    content: "";
+    background-color: white;
+    display: block;
+    width: 1em;
+    height: 0.2em;
+    margin: 0.5em 0; }
+
+.poster {
+  font-size: 10mm;
+  width: 21em;
+  height: 29.7em;
+  position: relative; }
+  .poster .content {
+    position: absolute;
+    left: 0.5em;
+    top: 0.5em;
+    right: 0.5em;
+    bottom: 3em;
+    padding: 1em; }
+    .poster .content .title, .poster .content .info {
+      font-size: 1.4em;
+      text-transform: uppercase; }
+  .poster .footer {
+    position: absolute;
+    left: 0.5em;
+    right: 0.5em;
+    bottom: 0.5em; }
+    .poster .footer .link {
+      float: left;
+      font-size: 0.5em; }
+    .poster .footer .logo {
+      float: right;
+      width: 30%;
+      height: auto; }
+
+.fbevent {
+  position: relative;
+  font-size: 10px;
+  width: 192em;
+  height: 108em; }
+  .fbevent .content {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top: 0;
+    z-index: 0;
+    padding: 4em; }
+    .fbevent .content .title, .fbevent .content .info {
+      font-size: 10em; }
+  .fbevent .footer {
+    position: absolute;
+    bottom: 4em;
+    right: 4em;
+    left: 4em; }
+    .fbevent .footer .link {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      font-size: 3em;
+      color: white; }
+    .fbevent .footer .logo {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      width: 30%;
+      height: auto; }
+
+.instagram {
+  position: relative;
+  font-size: 10px;
+  width: 120em;
+  height: 120em; }
+  .instagram .content {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top: 0;
+    z-index: 0;
+    padding: 4em; }
+    .instagram .content .title, .instagram .content .info {
+      font-size: 8em; }
+  .instagram .footer {
+    position: absolute;
+    bottom: 4em;
+    right: 4em;
+    left: 4em; }
+    .instagram .footer .link {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      font-size: 3em;
+      color: white; }
+    .instagram .footer .logo {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      width: 30%;
+      height: auto; }
+
+.twitter {
+  position: relative;
+  font-size: 10px;
+  width: 120em;
+  height: 60em; }
+  .twitter .content {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top: 0;
+    z-index: 0;
+    padding: 4em; }
+    .twitter .content .title, .twitter .content .info {
+      font-size: 5em; }
+  .twitter .footer {
+    position: absolute;
+    bottom: 4em;
+    right: 4em;
+    left: 4em; }
+    .twitter .footer .link {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      font-size: 3em;
+      color: white; }
+    .twitter .footer .logo {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      width: 30%;
+      height: auto; }
+
+.previews {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+  .previews .preview {
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    margin: 0 2em 2em 0; }
+    .previews .preview h3 {
+      margin: 0; }
+    .previews .preview .asset {
+      margin: 14px 0; }
+      .previews .preview .asset.print {
+        -webkit-box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
+        box-shadow: 0 0 1em rgba(0, 0, 0, 0.2); }
+  .previews .poster {
+    font-size: 12px; }
+  .previews .fbevent {
+    font-size: 3px; }
+  .previews .twitter {
+    font-size: 4px; }
+  .previews .instagram {
+    font-size: 3px; }
