Configure static path outside of app code

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <title>Communications asset editor</title>
-        <link rel="icon" href="/static/images/favicon.png">
+        <link rel="icon" href="{{ static_path }}/images/favicon.png">
         <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="/static/main.css">
+        <link rel="stylesheet" type="text/css" href="{{ static_path }}/main.css">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
         <script src="https://use.typekit.net/rdb8ojx.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
-        <script src="/static/main.js"></script>
+        <script src="{{ static_path }}/main.js"></script>
     </head>
     <body>
         <div class="page">
