--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,7 +52,11 @@
                                 Part of Disobedience Live<br>
                                 disobedience.live/events
                             </div>
-                            <img class="logo" src="/static/images/logo-white.svg">
+                            {% if asset.0 == "print" %}
+                            <img class="logo" src="{{ static_path }}/images/logo.svg">
+                            {% else %}
+                            <img class="logo" src="{{ static_path }}/images/logo-white.svg">
+                            {% endif %}
                         </div>
                     </div>
                     <a href="">Download this asset ({{ asset.3 }})</a>
