Latest CSS build

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -89,12 +89,12 @@ img {
       left: 0;
       bottom: 0;
       right: 0;
-      background-image: url(/static/images/gradient.png);
+      background-image: url(images/gradient.png);
       background-size: 100% 10px; }
     .asset .gradient:after {
       content: "";
       display: block;
-      background: url(/static/images/noise.gif);
+      background: url(images/noise.gif);
       background-size: 500px 500px;
       position: absolute;
       opacity: 0.10;
