--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
                     </li>
                     <li>
                         <label for="titleInput">Gradient offset</label>
-                        <input type="range" id="gradInput" min="0.0" max="1.0" step="0.01">
+                        <input type="range" id="gradInput" min="0.0" max="1.0" step="0.001" value="0.3">
                     </li>
                 </ul>
             </div>
