Enable manual line breaks in text

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,11 +23,11 @@
                 <ul class="inputs">
                     <li>
                         <label for="titleInput">Title</label>
-                        <input type="text" id="titleInput" value="Your event title here">
+                        <textarea id="titleInput">Your event title here</textarea>
                     </li>
                     <li>
                         <label for="titleInput">Info</label>
-                        <input type="text" id="infoInput" value="Your event info here">
+                        <textarea id="infoInput">Your event info here</textarea>
                     </li>
                     <li>
                         <label for="titleInput">Gradient offset</label>
