--- a/src/scss/_entry.scss
+++ b/src/scss/_entry.scss
@@ -18,7 +18,10 @@
         max-width: 40em;
     }
 
-    input[type=text] {
+    textarea {
         padding: 0.4em;
+        width: 100%;
+        height: 5em;
+        max-width: 40em;
     }
 }
