--- a/src/scss/_assets.scss
+++ b/src/scss/_assets.scss
@@ -75,7 +75,7 @@
         top: 0.5em;
         right: 0.5em;
         bottom: 3em;
-        padding: 1em;
+        padding: 3em 2em;
 
         .title, .info {
             font-size: 1.4em;
@@ -96,6 +96,48 @@
 
         .logo {
             float: right;
+            width: 30%;
+            height: auto;
+        }
+    }
+}
+
+@mixin socmed-asset($text-size: 8em) {
+    position: relative;
+
+    .content {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        top: 0;
+        z-index: 0;
+        padding: 8em 6em;
+
+        .title, .info {
+            font-size: $text-size;
+        }
+    }
+
+    .footer {
+        position: absolute;
+        bottom: 4em;
+        right: 4em;
+        left: 4em;
+
+        .link {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            font-size: 3em;
+            color: white;
+        }
+
+        .logo {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+
             width: 30%;
             height: auto;
         }
