--- a/app/templates/asset.html
+++ b/app/templates/asset.html
@@ -17,8 +17,8 @@
         <div class="asset {{ medium }} {{ format }}">
             <div class="content gradient-container">
                 <div class="gradient" style="left: -{{ grad }}%"></div>
-                <div class="title">{{ title }}</div>
-                <div class="info">{{ info }}</div>
+                <div class="title">{{ title |safe }}</div>
+                <div class="info">{{ info |safe }}</div>
             </div>
             <div class="footer">
                 <div class="link">
