--- a/src/scss/_assets.scss
+++ b/src/scss/_assets.scss
@@ -24,8 +24,26 @@
             bottom: 0;
             right: 0;
 
-            background-image: url(images/gradient.png);
-            background-size: 100% 10px;
+            background: linear-gradient(
+                90deg,
+                $c-grad00 0%,
+                $c-grad01 7%,
+                $c-grad02 14%,
+                $c-grad03 20%,
+                $c-grad04 27%,
+                $c-grad05 35%,
+                $c-grad06 40%,
+                $c-grad07 47%,
+                $c-grad08 54%,
+                $c-grad09 59%,
+                $c-grad10 61%,
+                $c-grad00 65%,
+                $c-grad01 72%,
+                $c-grad02 79%,
+                $c-grad03 85%,
+                $c-grad04 92%,
+                $c-grad05 100%
+            );
         }
 
         &:after {
@@ -73,7 +91,7 @@
 }
 
 .poster {
-    font-size: 10mm;
+    font-size: 59px;
     width: 21em;
     height: 29.7em;
 
